--- a/index.html
+++ b/index.html
@@ -27,37 +27,71 @@
 		<div><!--page content-->
 			<section>
 				
-	<h2>About</h2>
-	<p>
-		The Laboratory for Modelling and Analytics of Software and Systems (MASS Lab) is Professor Hui Chen's research group at the City University of New York.  The group is investigating a multi-pronged approach for engineering large and complex software and networked systems. For instance, analyzing how developers interact with IDEs allows us to predict development activities and to improve these productivity tools; observing software changes in software projects provides us opportunity not only to discover software architecture and common bugs, but also to suggest coding solutions.
-	</p>
+<h2 id="about">About</h2>
+<p>The Laboratory for Modelling and Analytics of Software and Systems (MASS Lab) is Professor Hui Chen’s research group at the City University of New York.  The group is investigating a multi-pronged approach for engineering large and complex software and networked systems. For instance, analyzing how developers interact with IDEs allows us to predict development activities and to improve these productivity tools; observing software changes in software projects provides us opportunity not only to discover software architecture and common bugs, but also to suggest coding solutions.</p>
 
+<p>The group welcomes collaborations with industry and with motivated graduate and undergraduate students. Please contact Professor Hui Chen if you are interested in joining the research group.</p>
 
+<h3 id="people">People</h3>
 
-	
-	<p>
-		The group welcomes collaborations with industry and with motivated graduate and undergraduate students. Please contact Professor Hui Chen if you are interested in joining the research group. 
-	</p>
+<div class="row">
+<div class="col-md-12">
 
+<div class="float-left projectimg m-3">
+<div style="vertical-align: top;display: inline-block;text-align: center;width: 200px;">
+<img src="assets/images/people/HuiChenWebSm.png" style="width:150px;height:200px;background-color:grey;" />
+<span style="display:block;font-size:1.5em;">
 
+<a href="https://huichen-cs.github.io/" target="_blank">Hui Chen</a>
 
-<h2>Active and Recent Projects</h2>
+</span>
+</div>
+</div>
 
-	<h3>Hierarchical Usage Context for Software Exceptions</h3>
-	<div class="row">
-		<div class="col-md-12">
-			<div class="float-left projectimg m-3">
-				<img src="/assets/images/faultctx.png"/>
-			</div>
-			<p>The primary objective is to provide usage contexts for software faults manifested as software exceptions. The modelling tools are unsupervised probabilistic graphical models. The datasets of interest are the combination of interaction traces and software crash reports. The output of the models includes a tree or a hierarchy of usage contexts and the probabilistic association of software exceptions to the tree of contexts, which contributes to a debugging methodology called “debugging in the large”, a postmortem analysis of large amount of usage data to recognize patterns of bugs.</p>
-		</div>
-	</div>
-	<div class="col-md-12">
-		<div class="row">
-			
-				<div class="publication">
-					<h4>Publication</h4>
-					<ol class="bibliography"><li><span id="chen2019modeling">Chen, H., Damevski, K., Shepherd, D., &amp; Kraft, N. A. (2019). Modeling hierarchical usage context for software exceptions based on interaction data. <i>Automated Software Engineering</i>. https://doi.org/10.1007/s10515-019-00265-3</span>
+<div class="float-left projectimg m-3">
+<div style="vertical-align: top;display: inline-block;text-align: center;width: 200px;">
+<img src="assets/images/people/LedioTerolliWebSm.png" style="width:150px;height:200px;background-color:grey;" />
+<span style="display:block;font-size:1.5em;">
+
+Ledio Terolli
+
+</span>
+</div>
+</div>
+
+<div class="float-left projectimg m-3">
+<div style="vertical-align: top;display: inline-block;text-align: center;width: 200px;">
+<img src="assets/images/people/YunhuaZhaoWebSm.png" style="width:200px;height:200px;background-color:grey;" />
+<span style="display:block;font-size:1.5em;">
+
+Yunhua Zhao
+
+</span>
+</div>
+</div>
+
+</div>
+</div>
+
+<h2 id="active-and-recent-projects">Active and Recent Projects</h2>
+
+<h3 id="hierarchical-usage-context-for-software-exceptions">Hierarchical Usage Context for Software Exceptions</h3>
+<div class="row">
+
+<div class="col-md-12">
+<div class="float-left projectimg m-3">
+<img src="/assets/images/faultctx.png" />
+</div>
+<p>The primary objective is to provide usage contexts for software faults manifested as software exceptions. The modelling tools are unsupervised probabilistic graphical models. The datasets of interest are the combination of interaction traces and software crash reports. The output of the models includes a tree or a hierarchy of usage contexts and the probabilistic association of software exceptions to the tree of contexts, which contributes to a debugging methodology called “debugging in the large”, a postmortem analysis of large amount of usage data to recognize patterns of bugs.</p>
+</div>
+</div>
+
+<div class="col-md-12">
+<div class="row">
+
+<div class="publication">
+<h4>Publication</h4>
+<ul class="bibliography"><li><span id="chen2019modeling">Chen, H., Damevski, K., Shepherd, D., &amp; Kraft, N. A. (2019). Modeling hierarchical usage context for software exceptions based on interaction data. <i>Automated Software Engineering</i>. https://doi.org/10.1007/s10515-019-00265-3</span>
 
 <div id="chen2019modeling-materials">
   <nav class="nav">
@@ -94,27 +128,29 @@
 </pre>
 
 </div>
-</li></ol>
-				</div>
-			
-		</div>
-	</div>
+</li></ul>
+</div>
 
-	<h3>Information Retrieval for Software Code and Documentation</h3>
-	<div class="row">
-		<div class="col-md-12">
-			<div class="float-left projectimg m-3">
-				<img src="/assets/images/sotags.png"/>
-			</div>
-			<p>The growing crow-sourced online software development documentation and the advancement in Web searches have changed how we learn to develop software. How do we preserve this valuable software documentation? How do we integrate the documentation with our day-to-day software development process, tools, and ecosystem? How do we use the knowledge in the documentation to build better software, system and networks? The primary objective is to retrieve knowledge from the crowd-sourced informational software documentation and to use the knowledge to help improve software development tools and ecosystems.</p>
-		</div>
-	</div>
-	<div class="col-md-12">
-		<div class="row">
-			
-				<div class="publication">
-					<h4>Publication</h4>
-					<ol class="bibliography"><li><span id="CHEN2019283">Chen, H., Coogle, J., &amp; Damevski, K. (2019). Modeling stack overflow tags and topics as a hierarchy of concepts. <i>Journal of Systems and Software</i>, <i>156</i>, 283–299. https://doi.org/https://doi.org/10.1016/j.jss.2019.07.033</span>
+</div>
+</div>
+
+<h3 id="information-retrieval-for-software-code-and-documentation">Information Retrieval for Software Code and Documentation</h3>
+<div class="row">
+
+<div class="col-md-12">
+<div class="float-left projectimg m-3">
+<img src="/assets/images/sotags.png" />
+</div>
+<p>The growing crow-sourced online software development documentation and the advancement in Web searches have changed how we learn to develop software. How do we preserve this valuable software documentation? How do we integrate the documentation with our day-to-day software development process, tools, and ecosystem? How do we use the knowledge in the documentation to build better software, system and networks? The primary objective is to retrieve knowledge from the crowd-sourced informational software documentation and to use the knowledge to help improve software development tools and ecosystems.</p>
+</div>
+</div>
+
+<div class="col-md-12">
+<div class="row">
+
+<div class="publication">
+<h4>Publication</h4>
+<ul class="bibliography"><li><span id="CHEN2019283">Chen, H., Coogle, J., &amp; Damevski, K. (2019). Modeling stack overflow tags and topics as a hierarchy of concepts. <i>Journal of Systems and Software</i>, <i>156</i>, 283–299. https://doi.org/https://doi.org/10.1016/j.jss.2019.07.033</span>
 
 <div id="CHEN2019283-materials">
   <nav class="nav">
@@ -134,7 +170,7 @@
   </nav>
 
   
-  <p id="CHEN2019283-abstract" class="collapse">Developers rely on online Q&A forums to look up technical solutions, to pose questions on implementation problems, and to enhance their community profile by contributing answers. Many popular developer communication platforms, such as the Stack Overflow Q&A forum, require threads of discussion to be tagged by their contributors for easier lookup in both asking and answering questions. In this paper, we propose to leverage Stack Overflow’s tags to create a hierarchical organization of concepts discussed on this platform. The resulting concept hierarchy couples tags with a model of their relevancy to prospective questions and answers. For this purpose, we configure and apply a supervised multi-label hierarchical topic model to Stack Overflow questions and demonstrate the quality of the model in several ways: by identifying tag synonyms, by tagging previously unseen Stack Overflow posts, and by exploring how the hierarchy could aid exploratory searches of the corpus. The results suggest that when traversing the inferred hierarchical concept model of Stack Overflow the questions become more specific as one explores down the hierarchy and more diverse as one jumps to different branches. The results also indicate that the model is an improvement over the baseline for the detection of tag synonyms and that the model could enhance existing ensemble methods for suggesting tags for new questions. The paper indicates that the concept hierarchy as a modeling imperative can create a useful representation of the Stack Overflow corpus. This hierarchy can be in turn integrated into development tools which rely on information retrieval and natural language processing, and thereby help developers more efficiently navigate crowd-sourced online documentation.</p>
+  <p id="CHEN2019283-abstract" class="collapse">Developers rely on online Q&amp;A forums to look up technical solutions, to pose questions on implementation problems, and to enhance their community profile by contributing answers. Many popular developer communication platforms, such as the Stack Overflow Q&amp;A forum, require threads of discussion to be tagged by their contributors for easier lookup in both asking and answering questions. In this paper, we propose to leverage Stack Overflow’s tags to create a hierarchical organization of concepts discussed on this platform. The resulting concept hierarchy couples tags with a model of their relevancy to prospective questions and answers. For this purpose, we configure and apply a supervised multi-label hierarchical topic model to Stack Overflow questions and demonstrate the quality of the model in several ways: by identifying tag synonyms, by tagging previously unseen Stack Overflow posts, and by exploring how the hierarchy could aid exploratory searches of the corpus. The results suggest that when traversing the inferred hierarchical concept model of Stack Overflow the questions become more specific as one explores down the hierarchy and more diverse as one jumps to different branches. The results also indicate that the model is an improvement over the baseline for the detection of tag synonyms and that the model could enhance existing ensemble methods for suggesting tags for new questions. The paper indicates that the concept hierarchy as a modeling imperative can create a useful representation of the Stack Overflow corpus. This hierarchy can be in turn integrated into development tools which rely on information retrieval and natural language processing, and thereby help developers more efficiently navigate crowd-sourced online documentation.</p>
   
 
   <pre id="CHEN2019283-bibtex" class="pre pre-scrollable collapse">@article{CHEN2019283,
@@ -152,27 +188,29 @@
 </pre>
 
 </div>
-</li></ol>
-				</div>
-			
-		</div>
-	</div>
+</li></ul>
+</div>
 
-	<h3>Interaction-Aware Recommendation Systems for Software Developers</h3>
-	<div class="row">
-		<div class="col-md-12">
-			<div class="float-left projectimg m-3">
-				<img src="/assets/images/idetrace.png"/>
-			</div>
-			<p>The primary objective is integrate developer activity modeling into recommendation systems for software developers. Software development is a complex cognitive task. We can reduce software developers’ cognitive load by providing effective tools. These tools should be capable of recognizing developers’ activities and thereby make recommendations, such as, best IDE commands or plugins to choose from and situated learning of best practices. </p>
-		</div>
-	</div>
-	<div class="col-md-12">
-		<div class="row">
-			
-				<div class="publication">
-					<h4>Publication</h4>
-					<ol class="bibliography"><li><span id="Chen2019UAP_3304221_3319731">Chen, H., Ciborowska, A., &amp; Damevski, K. (2019). Using Automated Prompts for Student Reflection on Computer Security Concepts. In <i>Proceedings of the 2019 ACM Conference on Innovation and Technology in Computer Science Education</i> (pp. 506–512). New York, NY, USA: ACM. https://doi.org/10.1145/3304221.3319731</span>
+</div>
+</div>
+
+<h3 id="interaction-aware-recommendation-systems-for-software-developers">Interaction-Aware Recommendation Systems for Software Developers</h3>
+<div class="row">
+
+<div class="col-md-12">
+<div class="float-left projectimg m-3">
+<img src="/assets/images/idetrace.png" />
+</div>
+<p>The primary objective is integrate developer activity modeling into recommendation systems for software developers. Software development is a complex cognitive task. We can reduce software developers’ cognitive load by providing effective tools. These tools should be capable of recognizing developers’ activities and thereby make recommendations, such as, best IDE commands or plugins to choose from and situated learning of best practices. </p>
+</div>
+</div>
+
+<div class="col-md-12">
+<div class="row">
+
+<div class="publication">
+<h4>Publication</h4>
+<ul class="bibliography"><li><span id="Chen2019UAP_3304221_3319731">Chen, H., Ciborowska, A., &amp; Damevski, K. (2019). Using Automated Prompts for Student Reflection on Computer Security Concepts. In <i>Proceedings of the 2019 ACM Conference on Innovation and Technology in Computer Science Education</i> (pp. 506–512). New York, NY, USA: ACM. https://doi.org/10.1145/3304221.3319731</span>
 
 <div id="Chen2019UAP_3304221_3319731-materials">
   <nav class="nav">
@@ -292,27 +330,29 @@
 </pre>
 
 </div>
-</li></ol>
-				</div>
-			
-		</div>
-	</div>
+</li></ul>
+</div>
 
-	<h3>Accountable and Secure Systems</h3>
-	<div class="row">
-		<div class="col-md-12">
-			<div class="float-left projectimg m-3">
-				<img src="/assets/images/flownet.png"/>
-			</div>
-			<p>Preventative countermeasures and accountability are two complementary approaches to address computer security. Preventative countermeasures have been the primary approach in practice and in research. Real-world experiences from dealing with security indicate that accountability is not only complement to preventative countermeasures, but also necessary, in particular, when online privacy becomes a growing concern to individuals and societies at the advent of sophisticated cross-site referencing tools and algorithms. The primary object is thus to build accountable systems and networks to address real-word computer security. </p>
-		</div>
-	</div>
-	<div class="col-md-12">
-		<div class="row">
-			
-				<div class="publication">
-					<h4>Publication</h4>
-					<ol class="bibliography"><li><span id="8813093">Xiao, Y., Zeng, L., Chen, H., &amp; Li, T. (2019). Prototyping Flow-net Logging for Accountability Management in Linux Operating Systems for IoTs. <i>IEEE Access</i>, 1–1. https://doi.org/10.1109/ACCESS.2019.2937637</span>
+</div>
+</div>
+
+<h3 id="accountable-and-secure-systems">Accountable and Secure Systems</h3>
+<div class="row">
+
+<div class="col-md-12">
+<div class="float-left projectimg m-3">
+<img src="/assets/images/flownet.png" />
+</div>
+<p>Preventative countermeasures and accountability are two complementary approaches to address computer security. Preventative countermeasures have been the primary approach in practice and in research. Real-world experiences from dealing with security indicate that accountability is not only complement to preventative countermeasures, but also necessary, in particular, when online privacy becomes a growing concern to individuals and societies at the advent of sophisticated cross-site referencing tools and algorithms. The primary object is thus to build accountable systems and networks to address real-word computer security. </p>
+</div>
+</div>
+
+<div class="col-md-12">
+<div class="row">
+
+<div class="publication">
+<h4>Publication</h4>
+<ul class="bibliography"><li><span id="8813093">Xiao, Y., Zeng, L., Chen, H., &amp; Li, T. (2019). Prototyping Flow-net Logging for Accountability Management in Linux Operating Systems for IoTs. <i>IEEE Access</i>, 1–1. https://doi.org/10.1109/ACCESS.2019.2937637</span>
 
 <div id="8813093-materials">
   <nav class="nav">
@@ -369,7 +409,7 @@
 
   <pre id="FU2018167-bibtex" class="pre pre-scrollable collapse">@article{FU2018167,
   title = {{FNF}: Flow-net based fingerprinting and its applications},
-  journal = {Computers \& Security},
+  journal = {Computers \&amp; Security},
   volume = {75},
   pages = {167 - 181},
   month = jun,
@@ -524,12 +564,11 @@
 </pre>
 
 </div>
-</li></ol>
-				</div>
-			
-		</div>
-	</div>
+</li></ul>
+</div>
 
+</div>
+</div>
 
 
 			</section>
